--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                 </div>
             </div>
         </header>
+        <div class="card"> <div class="icon"><img src="https://wallpapersmug.com/u/c6637f/retro-city-sunset-digital-art.jpg" id="favicon"></div><div class="header">
+  <div class="image"> <img src="https://wallpapersmug.com/u/c6637f/retro-city-sunset-digital-art.jpg" alt="" /> </div>
+ 
+  <h2>chillspot.serv.gs</h2>
+  </div>
+  <div id="rest">Loading ...</div>
+</div>
         <!-- About-->
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
