--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
                 </div>
             </div>
         </header>
+        <script>
+        var url = "https://api.minetools.eu/ping/chillspot.serv.gs/";
+ 
+$.getJSON(url, function(r) {
+    //data is the JSON string
+ if(r.error){
+    $('#rest').html('Server Offline');
+   return false;
+ } 
+var pl = '';
+ if(r.players.sample.length > 0 ){ pl = '<br>OP: '+r.players.sample[0].name;  } 
+  $('#rest').html(r.description.replace(/§(.+?)/gi, '')+'<br><b>Players Online:</b> '+r.players.online+pl);
+ $('#favicon').attr('src', r.favicon);
+    
+});
+        </script>
   <h2>chillspot.serv.gs</h2>
   </div>
   <div id="rest">Loading ...</div>
