--- a/index.html
+++ b/index.html
@@ -45,26 +45,7 @@
                 </div>
             </div>
         </header>
-        <script>
-        var url = "https://api.minetools.eu/ping/chillspot.serv.gs/";
- 
-$.getJSON(url, function(r) {
-    //data is the JSON string
- if(r.error){
-    $('#rest').html('Server Offline');
-   return false;
- } 
-var pl = '';
- if(r.players.sample.length > 0 ){ pl = '<br>OP: '+r.players.sample[0].name;  } 
-  $('#rest').html(r.description.replace(/§(.+?)/gi, '')+'<br><b>Players Online:</b> '+r.players.online+pl);
- $('#favicon').attr('src', r.favicon);
-    
-});
-        </script>
-  <h2>chillspot.serv.gs</h2>
-  </div>
-  <div id="rest">Loading ...</div>
-</div>
+       <img src="https://mcapi.us/server/image?ip=chillspot.serv.gs&theme=dark" alt="Trulli" width="250" height="50">
         <!-- About-->
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
