--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Mountains</h4>
                                     <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                    <img src="https://mcapi.us/server/image?ip=chillspot.serv.gs&theme=dark" alt="Trulli" width="250" height="50">
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
