--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                             yourself! You are also welcome to advertise your SM, discord, etc. in our partners channel for FREE. We cant wait
                             to welcome you in :)
                         </p>
+                        <br>
                     </div>
                 </div>
 
@@ -98,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
                 <div class="col-lg-6">
@@ -113,14 +114,15 @@
                     </div>
                 </div>
             </div>
+          </div>
         </section>
         <!-- Signup-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
+                    <div class="col-md-5 col-lg-4 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Want to Join Us?</h2>
+
                         <!-- * * * * * * * * * * * * * * *-->
                         <!-- * * SB Forms Contact Form * *-->
                         <!-- * * * * * * * * * * * * * * *-->
@@ -138,7 +140,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
 
-                    <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="col-md-4 mb-3 mb-md-0 justify-content-center">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-envelope text-primary mb-2"></i>
@@ -152,13 +154,17 @@
 
 
                 </div>
-
-
+                <div class="social d-flex justify-content-center">
+                    <a></a>
+                    <a></a>
+                    <a></a>
+                </div>
+                <br>
                 <img src="https://mcapi.us/server/image?ip=chillspot.serv.gs&theme=dark" alt="Trulli" width="400" height="80">
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">&copy;2022 ChillSpot </div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
