--- a/index.html
+++ b/index.html
@@ -119,26 +119,13 @@
         <!-- Signup-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-5 col-lg-4 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
 
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-
-                    </div>
-                </div>
             </div>
         </section>
         <!-- Contact-->
         <section class="contact-section bg-black">
             <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
 
                     <div class="col-md-4 mb-3 mb-md-0 justify-content-center">
                         <div class="card py-4 h-100">
@@ -155,9 +142,7 @@
 
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a></a>
-                    <a></a>
-                    <a></a>
+                  
                 </div>
                 <br>
                 <img src="https://mcapi.us/server/image?ip=chillspot.serv.gs&theme=dark" alt="Trulli" width="400" height="80">
