--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                         <h1 class="mx-auto my-0 text-uppercase">ChillSpot</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">A Chill Hangout And Safe Space For Everyone!<h2>
                           <div class="d-flex justify-content-center">
+                            <div class="social d-flex justify-content-center">
+
+
                             <img class="text-center"; src="https://cdn8.bigcommerce.com/s-prdpfsbvbl/product_images/uploaded_images/button-discord.png" alt="join" width="250" height="60">
+</div>
                     </div>
                     </div>
                 </div>
