--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="Chillspot is a Discord server dedicated to providing a safe and fun space for all!" />
         <meta name="author" content="" />
         <title>ChillSpot - Discord</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Features</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://discord.gg/vdYx352WyJ">Join</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://discord.gg/eVgSAzWsqQ">Join</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">ChillSpot</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A Chill Hangout And Safe Space For Everyone!<h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A community Discord server created for people like you!<h2>
                           <div class="d-flex justify-content-center">
                             <div class="social d-flex justify-content-center">
 
