--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         <h1 class="mx-auto my-0 text-uppercase">ChillSpot</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">A community Discord server created for people like you!<h2>
                           <div class="d-flex justify-content-center">
-                            <div class="social d-flex justify-content-center">
+                            <div class="row gx-4 gx-lg-5 justify-content-center">
+                                <div class="col-lg-8">
 
 
                             <img class="text-center"; src="https://cdn8.bigcommerce.com/s-prdpfsbvbl/product_images/uploaded_images/button-discord.png" alt="join" width="250" height="60">
@@ -49,6 +50,7 @@
                     </div>
                     </div>
                 </div>
+            </div>
             </div>
         </header>
 
