--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">ChillSpot</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">A community Discord server created for people like you!<h2>
-                        <a href="https://discord.gg/eVgSAzWsqQ">
+                        <a class="mx-auto" href="https://discord.gg/eVgSAzWsqQ">
          <img alt="discord" src="https://cdn8.bigcommerce.com/s-prdpfsbvbl/product_images/uploaded_images/button-discord.png"
-         width=250" height="65">
+         width=200" height="50">
   
                 </div>
             </div>
