--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+    <style>
+         
+.parent222 {
+height: 200px;
+background: #;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.child222 {
+background-color: 
+}
+    </style>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -40,9 +53,13 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">ChillSpot</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">A community Discord server created for people like you!<h2>
-                        <h2><a class="mx-auto mt-2 mb-5" href="https://discord.gg/eVgSAzWsqQ">
+                            <div class="parent222">
+<div class="child222">
+    <a href="https://discord.gg/eVgSAzWsqQ">
          <img alt="discord" src="https://cdn8.bigcommerce.com/s-prdpfsbvbl/product_images/uploaded_images/button-discord.png"
-              width=200" height="50"></a></h2>
+         width=250" height="65">
+</div>
+</div>
   
                 </div>
             </div>
