--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">A community Discord server created for people like you!<h2>
                         <h2><a class="mx-auto mt-2 mb-5" href="https://discord.gg/eVgSAzWsqQ">
          <img alt="discord" src="https://cdn8.bigcommerce.com/s-prdpfsbvbl/product_images/uploaded_images/button-discord.png"
-              width=200" height="50"></a></h2>
-  
-                </div>
+              width=200" height="50"> </a> </h2>
+
+            </div></a>
             </div>
             </div>
         </header>
