--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">&copy;2022 ChillSpot     Site Design By atLevelZero <a href="https://futuredigitalweb.com/">(Future Digital)</a></div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">2022 ChillSpot     Site Design By atLevelZero <a href="https://futuredigitalweb.com/">(Future Digital)</a></div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
